--- a/styles/second.css
+++ b/styles/second.css
@@ -65,8 +65,8 @@
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .benefits-container {
-    display: griOd;
-    grid-template-rows: 20vh 20vh 160vh;
+    display: grid;
+    grid-template-rows: 20vh 30vh 220vh;
     grid-template-columns: 1fr;
     align-items: center;
     justify-content: center;
@@ -76,7 +76,7 @@
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .benefits-container {
     display: grid;
-    grid-template-rows: 20vh 20vh 160vh;
+    grid-template-rows: 20vh 30vh 220vh;
     grid-template-columns: 1fr;
     align-items: center;
     justify-content: center;
@@ -139,7 +139,7 @@
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .benefit-title {
-    display: none;
+    display: block;
   }
 }
 
@@ -168,7 +168,7 @@
   .companies-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 20vh 20vh;
+    grid-template-rows: 15vh 15vh;
   }
 }
 
@@ -176,15 +176,19 @@
   .companies-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 20vh 20vh;
+    grid-template-rows: 15vh 15vh;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .companies-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 20vh 20vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    align-self: flex-start;
+    justify-self: center;
+    width: 90%;
   }
 }
 
@@ -219,14 +223,16 @@
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .list {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr;
+    grid-row-gap: 50px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .list {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr;
+    grid-row-gap: 50px;
   }
 }
 
@@ -234,6 +240,7 @@
   .list {
     display: grid;
     grid-template-columns: 1fr 2fr;
+    grid-column-gap: 100px;
   }
 }
 
@@ -268,22 +275,22 @@
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .benefit-sub-text {
     font-family: "Roboto Mono", sans-serif;
-    font-size: 1.13rem;
+    font-size: 0.72rem;
     font-weight: 400;
     letter-spacing: 0.04em;
     text-align: left;
-    line-height: 23px;
+    line-height: 15px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .benefit-sub-text {
     font-family: "Roboto Mono", sans-serif;
-    font-size: 1.13rem;
+    font-size: 0.72rem;
     font-weight: 400;
     letter-spacing: 0.04em;
     text-align: left;
-    line-height: 23px;
+    line-height: 15px;
   }
 }
 
@@ -332,22 +339,22 @@
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .benefit-sub-text-body {
     font-family: "Roboto Mono", sans-serif;
-    font-size: 3.31rem;
+    font-size: 1.94rem;
     font-weight: 500;
     letter-spacing: -0.01em;
     text-align: left;
-    line-height: 70px;
+    line-height: 40px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .benefit-sub-text-body {
     font-family: "Roboto Mono", sans-serif;
-    font-size: 3.31rem;
+    font-size: 1.94rem;
     font-weight: 500;
     letter-spacing: -0.01em;
     text-align: left;
-    line-height: 70px;
+    line-height: 40px;
   }
 }
 
@@ -390,13 +397,13 @@
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .benefits-list-container {
-    height: 160vh;
+    height: 220vh;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .benefits-list-container {
-    height: 160vh;
+    height: 220vh;
   }
 }
 
@@ -432,20 +439,33 @@
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .benefits-inner-list-container {
-    display: none;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 58vh 58vh 58vh;
+    grid-template-columns: 80px 1fr;
+    align-items: center;
+    grid-row-gap: 15vh;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .benefits-inner-list-container {
-    display: none;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 58vh 58vh 58vh;
+    grid-template-columns: 80px 1fr;
+    align-items: center;
+    grid-row-gap: 15vh;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .benefits-inner-list-container {
-    width: 88%;
-    display: none;
+    display: grid;
+    grid-template-rows: 33vh 33vh 33vh;
+    grid-template-columns: 80px 1fr;
+    align-items: center;
+    grid-row-gap: 22vh;
   }
 }
 
@@ -504,7 +524,7 @@
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .benefit-mobile-device-title {
-    display: block;
+    display: none;
   }
 }
 
@@ -544,7 +564,7 @@
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .benefit-box {
-    grid-row: 2/2;
+    grid-row: 1/1;
     grid-column: 1/1;
   }
 }
@@ -588,8 +608,8 @@
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .benefit-body {
-    grid-row: 1/2;
-    grid-column: 1/1;
+    grid-row: 1/1;
+    grid-column: 2/2;
   }
 }
 
@@ -616,15 +636,15 @@
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .primary {
-    width: 187px;
-    height: 41px;
+    width: 110px;
+    height: 24px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .primary {
-    width: 187px;
-    height: 41px;
+    width: 110px;
+    height: 24px;
   }
 }
 
@@ -658,22 +678,22 @@
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .smarg {
-    width: 187px;
-    height: 41px;
+    width: 91px;
+    height: 22px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .smarg {
-    width: 187px;
-    height: 41px;
+    width: 91px;
+    height: 22px;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .smarg {
-    width: 187px;
-    height: 41px;
+    width: 156px;
+    height: 38px;
   }
 }
 
@@ -706,15 +726,15 @@
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .box-1 {
-    width: 292px;
-    height: 252px;
+    width: 168px;
+    height: 145px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .box-1 {
-    width: 292px;
-    height: 252px;
+    width: 168px;
+    height: 145px;
   }
 }
 
@@ -748,15 +768,15 @@
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .box-3 {
-    width: 292px;
-    height: 252px;
+    width: 163px;
+    height: 140px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .box-3 {
-    width: 292px;
-    height: 268px;
+    width: 163px;
+    height: 140px;
   }
 }
 
@@ -771,47 +791,5 @@
   .box-3 {
     width: 292px;
     height: 268px;
-  }
-}
-
-.box-1 {
-  /* Small devices (landscape phones, 576px and up) */
-  /* // Medium devices (tablets, 768px and up) */
-  /* Large devices (desktops, 992px and up) */
-  /* // Extra large devices (large desktops, 1200px and up) */
-}
-
-@media only screen and (max-width: 575.98px) {
-  .box-1 {
-    width: 168px;
-    height: 145px;
-  }
-}
-
-@media only screen and (min-width: 576px) and (max-width: 767.98px) {
-  .box-1 {
-    width: 292px;
-    height: 252px;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991.98px) {
-  .box-1 {
-    width: 292px;
-    height: 252px;
-  }
-}
-
-@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
-  .box-1 {
-    width: 292px;
-    height: 252px;
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  .box-1 {
-    width: 292px;
-    height: 252px;
   }
 }
