--- a/scss/_mediaQueries.scss
+++ b/scss/_mediaQueries.scss
@@ -1,15 +1,29 @@
 @mixin for-phone-only {
-    @media (max-width: 599px) { @content; }
-  }
-  @mixin for-tablet-portrait-up {
-    @media (min-width: 600px) { @content; }
-  }
-  @mixin for-tablet-landscape-up {
-    @media (min-width: 900px) { @content; }
-  }
-  @mixin for-desktop-up {
-    @media (min-width: 1200px) { @content; }
-  }
-  @mixin for-big-desktop-up {
-    @media (min-width: 1800px) { @content; }
-  }
+    @media only screen and (min-width: 576px) and (max-width: 767.98px) {
+        @content;
+    }
+}
+
+@mixin for-bigger-phones {
+    @media only screen and (min-width: 576px) and (max-width: 767.98px) {
+        @content;
+    }
+}
+
+@mixin for-tablet-portrait-up {
+    @media only screen and (min-width: 768px) and (max-width: 991.98px) {
+        @content;
+    }
+}
+
+@mixin for-tablet-landscape-up {
+    @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+        @content;
+    }
+}
+
+@mixin for-desktop-up {
+    @media only screen and (min-width: 1200px) {
+        @content;
+    }
+}
