--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -60,3 +60,38 @@
         $i: $i + 1; 
     }
 } 
+@mixin removeDisplay($phones,$bigger-phones,$tablet,$tablet-up,$laptop){
+    @media only screen and (max-width: 575.98px) {
+         & {
+            display: $phones;
+        }
+    }
+    
+    /* Small devices (landscape phones, 576px and up) */
+    @media only screen and (min-width: 576px) and (max-width: 767.98px) {
+        & {
+            display: $bigger-phones;
+        }
+    }
+    
+    /* // Medium devices (tablets, 768px and up) */
+    @media only screen and (min-width: 768px) and (max-width: 991.98px) {
+        & {
+            display: $tablet;
+        }
+    }
+    
+    /* Large devices (desktops, 992px and up) */
+    @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+        & {
+            display: $tablet-up;
+        }
+    }
+    
+    /* // Extra large devices (large desktops, 1200px and up) */
+    @media only screen and (min-width: 1200px) {
+        & {
+            display: $laptop;
+        }
+    }
+}
