--- a/styles/first.css
+++ b/styles/first.css
@@ -829,6 +829,10 @@ button, .nav-link-container button {
 .mobile-device-header {
   justify-content: center;
   align-items: center;
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
 }
 
 @media only screen and (max-width: 575.98px) {
@@ -837,28 +841,24 @@ button, .nav-link-container button {
   }
 }
 
-/* Small devices (landscape phones, 576px and up) */
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .mobile-device-header {
     display: flex;
   }
 }
 
-/* // Medium devices (tablets, 768px and up) */
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .mobile-device-header {
     display: flex;
   }
 }
 
-/* Large devices (desktops, 992px and up) */
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .mobile-device-header {
     display: none;
   }
 }
 
-/* // Extra large devices (large desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
   .mobile-device-header {
     display: none;
@@ -866,11 +866,11 @@ button, .nav-link-container button {
 }
 
 .mobile-header-menu-bar {
+  height: 4vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 4vh;
   align-items: flex-end;
+  justify-content: space-between;
 }
 
 .mobile-inner-header {
@@ -882,10 +882,11 @@ button, .nav-link-container button {
 }
 
 .mobile-header-icon {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .mobile-header-icon p {
@@ -905,34 +906,37 @@ button, .nav-link-container button {
   width: 100%;
 }
 
+.hide-icon {
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
 @media only screen and (max-width: 575.98px) {
   .hide-icon {
     display: none;
   }
 }
 
-/* Small devices (landscape phones, 576px and up) */
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .hide-icon {
     display: none;
   }
 }
 
-/* // Medium devices (tablets, 768px and up) */
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .hide-icon {
     display: grid;
   }
 }
 
-/* Large devices (desktops, 992px and up) */
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .hide-icon {
     display: grid;
   }
 }
 
-/* // Extra large devices (large desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
   .hide-icon {
     display: grid;
