--- a/styles/index.css
+++ b/styles/index.css
@@ -846,6 +846,10 @@ button, .nav-link-container button {
 .mobile-device-header {
   justify-content: center;
   align-items: center;
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
 }
 
 @media only screen and (max-width: 575.98px) {
@@ -854,28 +858,24 @@ button, .nav-link-container button {
   }
 }
 
-/* Small devices (landscape phones, 576px and up) */
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .mobile-device-header {
     display: flex;
   }
 }
 
-/* // Medium devices (tablets, 768px and up) */
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .mobile-device-header {
     display: flex;
   }
 }
 
-/* Large devices (desktops, 992px and up) */
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .mobile-device-header {
     display: none;
   }
 }
 
-/* // Extra large devices (large desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
   .mobile-device-header {
     display: none;
@@ -883,11 +883,11 @@ button, .nav-link-container button {
 }
 
 .mobile-header-menu-bar {
+  height: 4vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 4vh;
   align-items: flex-end;
+  justify-content: space-between;
 }
 
 .mobile-inner-header {
@@ -899,10 +899,11 @@ button, .nav-link-container button {
 }
 
 .mobile-header-icon {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .mobile-header-icon p {
@@ -922,34 +923,37 @@ button, .nav-link-container button {
   width: 100%;
 }
 
+.hide-icon {
+  /* Small devices (landscape phones, 576px and up) */
+  /* // Medium devices (tablets, 768px and up) */
+  /* Large devices (desktops, 992px and up) */
+  /* // Extra large devices (large desktops, 1200px and up) */
+}
+
 @media only screen and (max-width: 575.98px) {
   .hide-icon {
     display: none;
   }
 }
 
-/* Small devices (landscape phones, 576px and up) */
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .hide-icon {
     display: none;
   }
 }
 
-/* // Medium devices (tablets, 768px and up) */
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .hide-icon {
     display: grid;
   }
 }
 
-/* Large devices (desktops, 992px and up) */
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .hide-icon {
     display: grid;
   }
 }
 
-/* // Extra large devices (large desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
   .hide-icon {
     display: grid;
@@ -1023,8 +1027,8 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .benefits-container {
-    display: griOd;
-    grid-template-rows: 20vh 20vh 160vh;
+    display: grid;
+    grid-template-rows: 20vh 30vh 220vh;
     grid-template-columns: 1fr;
     align-items: center;
     justify-content: center;
@@ -1034,7 +1038,7 @@ button, .nav-link-container button {
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .benefits-container {
     display: grid;
-    grid-template-rows: 20vh 20vh 160vh;
+    grid-template-rows: 20vh 30vh 220vh;
     grid-template-columns: 1fr;
     align-items: center;
     justify-content: center;
@@ -1097,7 +1101,7 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .benefit-title {
-    display: none;
+    display: block;
   }
 }
 
@@ -1126,7 +1130,7 @@ button, .nav-link-container button {
   .companies-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 20vh 20vh;
+    grid-template-rows: 15vh 15vh;
   }
 }
 
@@ -1134,15 +1138,19 @@ button, .nav-link-container button {
   .companies-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 20vh 20vh;
+    grid-template-rows: 15vh 15vh;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .companies-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 20vh 20vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    align-self: flex-start;
+    justify-self: center;
+    width: 90%;
   }
 }
 
@@ -1177,14 +1185,16 @@ button, .nav-link-container button {
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .list {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr;
+    grid-row-gap: 50px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .list {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr;
+    grid-row-gap: 50px;
   }
 }
 
@@ -1192,6 +1202,7 @@ button, .nav-link-container button {
   .list {
     display: grid;
     grid-template-columns: 1fr 2fr;
+    grid-column-gap: 100px;
   }
 }
 
@@ -1226,22 +1237,22 @@ button, .nav-link-container button {
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .benefit-sub-text {
     font-family: "Roboto Mono", sans-serif;
-    font-size: 1.13rem;
+    font-size: 0.72rem;
     font-weight: 400;
     letter-spacing: 0.04em;
     text-align: left;
-    line-height: 23px;
+    line-height: 15px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .benefit-sub-text {
     font-family: "Roboto Mono", sans-serif;
-    font-size: 1.13rem;
+    font-size: 0.72rem;
     font-weight: 400;
     letter-spacing: 0.04em;
     text-align: left;
-    line-height: 23px;
+    line-height: 15px;
   }
 }
 
@@ -1290,22 +1301,22 @@ button, .nav-link-container button {
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .benefit-sub-text-body {
     font-family: "Roboto Mono", sans-serif;
-    font-size: 3.31rem;
+    font-size: 1.94rem;
     font-weight: 500;
     letter-spacing: -0.01em;
     text-align: left;
-    line-height: 70px;
+    line-height: 40px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .benefit-sub-text-body {
     font-family: "Roboto Mono", sans-serif;
-    font-size: 3.31rem;
+    font-size: 1.94rem;
     font-weight: 500;
     letter-spacing: -0.01em;
     text-align: left;
-    line-height: 70px;
+    line-height: 40px;
   }
 }
 
@@ -1348,13 +1359,13 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .benefits-list-container {
-    height: 160vh;
+    height: 220vh;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .benefits-list-container {
-    height: 160vh;
+    height: 220vh;
   }
 }
 
@@ -1390,20 +1401,33 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .benefits-inner-list-container {
-    display: none;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 58vh 58vh 58vh;
+    grid-template-columns: 80px 1fr;
+    align-items: center;
+    grid-row-gap: 15vh;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .benefits-inner-list-container {
-    display: none;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 58vh 58vh 58vh;
+    grid-template-columns: 80px 1fr;
+    align-items: center;
+    grid-row-gap: 15vh;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .benefits-inner-list-container {
-    width: 88%;
-    display: none;
+    display: grid;
+    grid-template-rows: 33vh 33vh 33vh;
+    grid-template-columns: 80px 1fr;
+    align-items: center;
+    grid-row-gap: 22vh;
   }
 }
 
@@ -1462,7 +1486,7 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .benefit-mobile-device-title {
-    display: block;
+    display: none;
   }
 }
 
@@ -1502,7 +1526,7 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .benefit-box {
-    grid-row: 2/2;
+    grid-row: 1/1;
     grid-column: 1/1;
   }
 }
@@ -1546,8 +1570,8 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .benefit-body {
-    grid-row: 1/2;
-    grid-column: 1/1;
+    grid-row: 1/1;
+    grid-column: 2/2;
   }
 }
 
@@ -1574,15 +1598,15 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .primary {
-    width: 187px;
-    height: 41px;
+    width: 110px;
+    height: 24px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .primary {
-    width: 187px;
-    height: 41px;
+    width: 110px;
+    height: 24px;
   }
 }
 
@@ -1616,22 +1640,22 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .smarg {
-    width: 187px;
-    height: 41px;
+    width: 91px;
+    height: 22px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .smarg {
-    width: 187px;
-    height: 41px;
+    width: 91px;
+    height: 22px;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .smarg {
-    width: 187px;
-    height: 41px;
+    width: 156px;
+    height: 38px;
   }
 }
 
@@ -1664,15 +1688,15 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .box-1 {
-    width: 292px;
-    height: 252px;
+    width: 168px;
+    height: 145px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .box-1 {
-    width: 292px;
-    height: 252px;
+    width: 168px;
+    height: 145px;
   }
 }
 
@@ -1706,15 +1730,15 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .box-3 {
-    width: 292px;
-    height: 252px;
+    width: 163px;
+    height: 140px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .box-3 {
-    width: 292px;
-    height: 268px;
+    width: 163px;
+    height: 140px;
   }
 }
 
@@ -1729,48 +1753,6 @@ button, .nav-link-container button {
   .box-3 {
     width: 292px;
     height: 268px;
-  }
-}
-
-.box-1 {
-  /* Small devices (landscape phones, 576px and up) */
-  /* // Medium devices (tablets, 768px and up) */
-  /* Large devices (desktops, 992px and up) */
-  /* // Extra large devices (large desktops, 1200px and up) */
-}
-
-@media only screen and (max-width: 575.98px) {
-  .box-1 {
-    width: 168px;
-    height: 145px;
-  }
-}
-
-@media only screen and (min-width: 576px) and (max-width: 767.98px) {
-  .box-1 {
-    width: 292px;
-    height: 252px;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991.98px) {
-  .box-1 {
-    width: 292px;
-    height: 252px;
-  }
-}
-
-@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
-  .box-1 {
-    width: 292px;
-    height: 252px;
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  .box-1 {
-    width: 292px;
-    height: 252px;
   }
 }
 
@@ -1805,7 +1787,7 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .services-container {
-    width: 84%;
+    width: 75%;
   }
 }
 
@@ -1833,13 +1815,13 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .services-inner-container {
-    grid-template-rows: 30vh 50vh;
+    grid-template-rows: 32vh 100vh;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .services-inner-container {
-    grid-template-rows: 30vh 50vh;
+    grid-template-rows: 32vh 100vh;
   }
 }
 
@@ -1872,14 +1854,14 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .services-heading {
-    grid-template-rows: 3vh 24vh;
+    grid-template-rows: 8vh 18vh;
     width: 100%;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .services-heading {
-    grid-template-rows: 3vh 24vh;
+    grid-template-rows: 8vh 18vh;
     width: 100%;
   }
 }
@@ -1922,19 +1904,39 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .services-heading .sub-title {
+    font-family: "Roboto Mono";
+    font-size: 0.75rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0.04em;
+    text-align: left;
     width: 60%;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .services-heading .sub-title {
+    font-family: "Roboto Mono";
+    font-size: 0.75rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0.04em;
+    text-align: left;
     width: 60%;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .services-heading .sub-title {
-    width: 60%;
+    font-family: "Roboto Mono";
+    font-size: 1.13rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 23px;
+    letter-spacing: 0.04em;
+    text-align: left;
   }
 }
 
@@ -1972,19 +1974,38 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .services-heading .title {
-    width: 60%;
+    font-family: "Roboto Mono";
+    font-size: 2.38rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 52px;
+    letter-spacing: -0.07em;
+    text-align: left;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .services-heading .title {
-    width: 60%;
+    font-family: "Roboto Mono";
+    font-size: 2.38rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 52px;
+    letter-spacing: -0.07em;
+    text-align: left;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .services-heading .title {
-    width: 60%;
+    font-family: "Roboto Mono";
+    font-size: 3.63rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 79px;
+    letter-spacing: -0.07em;
+    text-align: left;
+    color: #F4F4F4;
   }
 }
 
@@ -2036,8 +2057,9 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .services-list-container {
-    display: grid;
-    grid-template-columns: minmax(180px, 300px);
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
   }
 }
 
@@ -2071,22 +2093,25 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .service-list, .service-list-1, .service-list-2, .service-list-3, .service-list-4, .service-list-5 {
-    height: 123px;
+    height: 83px;
     border-radius: 14px;
+    grid-column-gap: 5px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .service-list, .service-list-1, .service-list-2, .service-list-3, .service-list-4, .service-list-5 {
-    height: 123px;
+    height: 83px;
     border-radius: 14px;
+    grid-column-gap: 5px;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .service-list, .service-list-1, .service-list-2, .service-list-3, .service-list-4, .service-list-5 {
     height: 123px;
-    border-radius: 14px;
+    border-radius: 26px;
+    grid-column-gap: 10px;
   }
 }
 
@@ -2133,19 +2158,19 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .service-list-1 {
-    width: 180px;
+    width: 230px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .service-list-1 {
-    width: 180px;
+    width: 230px;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .service-list-1 {
-    width: 180px;
+    width: 388.5px;
   }
 }
 
@@ -2170,19 +2195,19 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .service-list-2 {
-    width: 180px;
+    width: 280px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .service-list-2 {
-    width: 180px;
+    width: 280px;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .service-list-2 {
-    width: 180px;
+    width: 521px;
   }
 }
 
@@ -2207,19 +2232,19 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .service-list-3 {
-    width: 180px;
+    width: 295px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .service-list-3 {
-    width: 180px;
+    width: 295px;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .service-list-3 {
-    width: 180px;
+    width: 551px;
   }
 }
 
@@ -2244,19 +2269,19 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .service-list-4 {
-    width: 180px;
+    width: 210px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .service-list-4 {
-    width: 180px;
+    width: 210px;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .service-list-4 {
-    width: 180px;
+    width: 405px;
   }
 }
 
@@ -2281,19 +2306,19 @@ button, .nav-link-container button {
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
   .service-list-5 {
-    width: 180px;
+    width: 300px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
   .service-list-5 {
-    width: 180px;
+    width: 300px;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .service-list-5 {
-    width: 180px;
+    width: 625px;
   }
 }
 
